# braid_rs

./: .gitignore  BRAID_IROH_INTEGRATION.md  Cargo.toml  README.md
.github/workflows/: build.yml
app/: Cargo.toml  README.md  build.bat  run.bat  run.ps1  tauri.conf.json
app/examples/: two_peers_debug.rs
app/public/: index.html
app/src/: README.md  discovery.rs  main.rs  node.rs  protocol.rs  proxy.rs  subscription.rs
app/style/: main.css
app/tests/: README.md  test_discovery.rs  test_node.rs  test_subscription.rs  test_two_peers.rs
app/tests/common/: mod.rs
bindings/cxx/: Cargo.toml
bindings/cxx/src/: lib.rs
bindings/node/: Cargo.toml
bindings/node/src/: lib.rs
core/: Cargo.toml  README.md  all_features_test.txt  core_check_errors.txt  main_test_errors.txt  test.cg
core/data/: meta.sqlite
core/examples/: antimatter_demo.rs  blob_demo.rs  comprehensive.rs  merge_types.rs  versioning.rs
core/src/: lib.rs  node.rs  sfv_test.rs
core/src/antimatter/: json_crdt.rs  tests.rs
core/src/blob/: http.rs  main.rs  mod.rs  store.rs  sync.rs
core/src/core/: error.rs  main.rs  mod.rs  tests.rs  traits.rs
core/src/core/client/: fetch.rs  fuzzer.rs  headers.rs  http_polyfill.rs  mod.rs  multiplex.rs  native_network.rs  parser.rs  retry.rs  subscription.rs  utils.rs  wasm_network.rs
core/src/core/merge/: diamond.rs  merge_type.rs  mod.rs  simpleton.rs
core/src/core/protocol/: binary.rs  constants.rs  formatter.rs  headers.rs  mod.rs  parser.rs
core/src/core/server/: config.rs  conflict_resolver.rs  fuzzer.rs  middleware.rs  mod.rs  parse_update.rs  resource_state.rs  send_update.rs  subscription.rs  tests.rs
core/src/core/types/: mod.rs  patch.rs  request.rs  response.rs  update.rs  version.rs
core/src/fs/: api.rs  binary_sync.rs  config.rs  daemon.rs  error.rs  mapping.rs  mod.rs  scanner.rs  server_handlers.rs  state.rs  subscription.rs  sync.rs  versions.rs  watcher.rs
core/src/fs/common/: activity.rs  config.rs  debouncer.rs  mod.rs
core/src/fs/local/: diff.rs  mapper.rs  mod.rs  scanner.rs  versions.rs  watcher.rs
core/src/fs/nfs/: backend.rs  mod.rs
core/src/fs/nfs/legit_nfs/: error.rs  mod.rs  server.rs
core/src/fs/nfs/legit_nfs/fs/: handle.rs  mod.rs  trait_.rs
core/src/fs/nfs/legit_nfs/mount/: mod.rs  types.rs
core/src/fs/nfs/legit_nfs/mount/handlers/: dump.rs  export.rs  mnt.rs  mod.rs  null.rs  umnt.rs  umntall.rs
core/src/fs/nfs/legit_nfs/nfs/: consts.rs  handlers.rs  mod.rs  types.rs
core/src/fs/nfs/legit_nfs/nfs/procedures/: create.rs  fsinfo.rs  fsstat.rs  getattr.rs  lookup.rs  mkdir.rs  mod.rs  null.rs  read.rs  readdir.rs  readdirplus.rs  remove.rs  rename.rs  rmdir.rs  setattr.rs  write.rs
core/src/fs/nfs/legit_nfs/rpc/: message.rs  mod.rs  record.rs
core/src/fs/nfs/legit_nfs/xdr/: decoder.rs  encoder.rs  mod.rs
core/src/fs/server/: handlers.rs  mod.rs  router.rs
core/src/fs/sync/: binary.rs  engine.rs  mod.rs  subscription.rs
core/tests/: integration_tests.rs
core/tests/interop/: server.js
examples/: blob_demo.rs  merge_types.rs  simple_get.rs
references/: README.md
references/iroh/: Cargo.toml  Cargo.toml.bak
references/iroh-gossip/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  release.toml
references/iroh-gossip/.github/workflows/: ci.yaml  docs.yaml  release.yaml  simulation.yaml  tests.yaml
references/iroh-gossip/examples/: chat.rs  setup.rs
references/iroh-gossip/simulations/: all.toml
references/iroh-gossip/src/: api.rs  lib.rs  metrics.rs  net.rs  proto.rs
references/iroh-gossip/src/net/: address_lookup.rs  util.rs
references/iroh-gossip/src/proto/: hyparview.rs  plumtree.rs  sim.rs  state.rs  topic.rs  util.rs
references/iroh-gossip/tests/: sim.rs
references/iroh-h3/: Cargo.toml  Cargo.toml.bak  LICENSE  README.md
references/iroh-h3/example/: Cargo.toml
references/iroh-h3/example/src/: lib.rs  mock_discovery.rs
references/iroh-h3/iroh-h3/: Cargo.toml
references/iroh-h3/iroh-h3-axum/: Cargo.toml  webdriver.json
references/iroh-h3/iroh-h3-axum/src/: lib.rs
references/iroh-h3/iroh-h3-axum/tests/: remote_id.rs
references/iroh-h3/iroh-h3-client/: Cargo.toml  README.md
references/iroh-h3/iroh-h3-client/src/: body.rs  connection_manager.rs  error.rs  lib.rs  middleware.rs  request.rs  response.rs
references/iroh-h3/iroh-h3-client/src/middleware/: cookie_jar.rs  follow_redirects.rs  retry_failures.rs  timeout.rs
references/iroh-h3/iroh-h3-client/src/response/: ndjson.rs  sse.rs
references/iroh-h3/iroh-h3-client/tests/: base.rs  connection_reuse.rs  error_handling.rs  full_body.rs  json.rs  sse.rs  streaming_bodies.rs
references/iroh-h3/iroh-h3/src/: lib.rs
references/iroh-proxy-utils/: Cargo.toml
src/: sfv_discovery.rs
src/antimatter/: antimatter.rs  crdt_trait.rs  json_crdt.rs  mod.rs  sequence_crdt.rs  tests.rs
src/blob/: http.rs  mod.rs  store.rs  sync.rs
src/core/: error.rs  mod.rs  tests.rs
src/core/client/: config.rs  fetch.rs  mod.rs  multiplex.rs  parser.rs  utils.rs
src/core/merge/: antimatter_merge.rs  merge_type.rs
src/core/protocol/: constants.rs
src/core/server/: middleware.rs  mod.rs  parse_update.rs  resource_state.rs
src/core/types/: content_range.rs  mod.rs  request.rs  response.rs  update.rs  version.rs
src/fs/: api.rs  binary_sync.rs  config.rs  diff.rs  mapping.rs  mod.rs  scanner.rs  server_handlers.rs  versions.rs
tests/: integration_tests.rs  interop_test.rs  multiplex_test.rs
