[package]
name = "braid_iroh"
version = "0.1.0"
edition = "2021"
description = "Braid-HTTP over Iroh P2P — Native Tauri v2 Desktop Application"
license = "MIT OR Apache-2.0"

[[bin]]
name = "braid_iroh"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["proxy"]
proxy = []

[dependencies]
# Tauri v2 Core
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# ── Iroh P2P stack ──────────────────────────────────────────────
iroh = { version = "0.96.1", features = ["test-utils"] }
n0-future = "0.3.2"
iroh-gossip = { path = "../references/iroh-gossip", features = ["net"] }
iroh-h3-axum = { path = "../references/iroh-h3/iroh-h3-axum" }
iroh-h3-client = { path = "../references/iroh-h3/iroh-h3-client" }

# ── Braid protocol (the parent crate) ──────────────────────────
braid_http_rs = { path = "../core", features = ["server", "client"] }

# ── Web framework ──────────────────────────────────────────────
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1"

# ── Async runtime ──────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# ── Serialization ──────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# ── Hashing ────────────────────────────────────────────────────
blake3 = "1"

# ── Utilities ──────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

[dev-dependencies]
rand = "0.10.0"
