[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.6", default-features = false }
futures-lite = "2.6.1"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
iroh = "0.95.1"
iroh-h3-axum = { version = "0.2.0", path = "../iroh-h3-axum" }
iroh-h3-client = { version = "0.3.0", path = "../iroh-h3-client", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros"] }
n0-future = "0.3.2"
