[package]
name = "iroh-h3-client"
version = "0.3.0"
edition = "2024"
description = "HTTP/3 client utilities over Iroh's QUIC P2P transport."
license = "MIT"
repository = "https://github.com/Le-Maz/iroh-h3"
readme = "./README.md"
keywords = ["quic", "p2p", "http3", "h3", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
iroh-h3 = { version = "0.1.0", path = "../iroh-h3" }
bytes = "1.10"
futures = "0.3.31"
h3 = "0.0.8"
iroh = "0.96"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1.3"
thiserror = "2.0"
tokio = { version = "1.48", features = ["sync"] }
dashmap = "6.1"
tracing = "0.1.41"
cookie = { version = "0.18.1", features = ["percent-encode"] }

# Use n0-futures to support both OS and WASM/web use
n0-future = "0.3.2"

# JSON support
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
mockall = "0.14.0"

[dev-dependencies]
example = { path = "../example" }
iroh-h3-axum = { path = "../iroh-h3-axum" }
axum = { version = "0.8.6", features = ["json"], default-features = false }
wasm-bindgen-test = "0.3.58"

[features]
default = []
json = ["serde", "serde_json"]
